--- a/mathchat.css
+++ b/mathchat.css
@@ -1,13 +1,103 @@
 /* CSS declarations go here */
+
+@import url(http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext);
+
+body {
+   background-color: #6EACDC; 
+}
+
 .chatinput{
-    position: absolute;
-    width: calc(100% - 20px);
+    position: fixed;
+    width: 80%;
+    height: 12%;
+    line-height: 12%;
     bottom: 10px;
+    left: 20px;
+    font-family: 'Titillium-Web', sans-serif;
+    overflow-y: scroll;
+    word-wrap: break-word;
+    border-radius: 5px;
+    padding: 10px 4px 4px 0px;
+    resize: none;
 }
 
 .chatarea {
     position: absolute;
-    height: 90%;
-    width: calc(100% - 20px);
-    overflow-x: scroll;
+    
+    top: 120px;
+    left: 20px;
+    height: 70%;
+    width: 80%;
+    padding-left: 15px;
+    
+    border-radius: 5px;
+    
+    overflow-y: scroll;
+    word-wrap: break-word;
+    
+    font-family: 'Titillium-Web', sans-serif;
+    
+    background-color: white;
 }
+
+#header {
+    position: fixed;
+    display: block;
+    
+    width:100%;
+    margin-top: -10px;
+    margin-left: -7px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 15px;
+    
+    background-color: #3399FF;
+    
+    z-index: 100;
+    
+    font-family: 'Titillium-Web', sans-serif;
+}
+
+/* Navigation bar */
+
+#navigationbar {
+    position: fixed;
+    display: block;
+    
+    background-color: black;
+    
+    height: 30px;
+    width: 100%;
+    
+    margin-top: 65px;
+    margin-left: -7px;
+    
+    z-index: 100;
+}
+/* These will be links eventually */
+#navigationbuttons li {
+    display: inline;
+    position: relative;
+
+    bottom: 7px;
+    left: -20px;
+    color: white;
+    text-align: center;
+    padding: 5px 10px 5px 10px;
+    
+    font-family: 'Titillium-Web', sans-serif;
+    
+}
+
+/* Side panel */
+.sidepanel {
+    background-color:white;
+    font-family: "Titillium-Web", sans-serif;
+    position: fixed;
+    top: 120px;
+    right: 0px;
+    width: 17%;
+    height: 85%;
+}
+
+
