--- a/mathchat.css
+++ b/mathchat.css
@@ -7,7 +7,7 @@
 
 .chatarea {
     position: absolute;
-    height: 90%;
+    height: calc(100% - 120px);
     width: calc(100% - 20px);
     overflow-x: scroll;
 }
