--- a/mathchat.css
+++ b/mathchat.css
@@ -3,101 +3,185 @@
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext);
 
 body {
-   background-color: #6EACDC; 
-}
-
-.chatinput{
-    position: fixed;
-    width: 80%;
-    height: 12%;
-    line-height: 12%;
-    bottom: 10px;
-    left: 20px;
-    font-family: 'Titillium-Web', sans-serif;
-    overflow-y: scroll;
-    word-wrap: break-word;
-    border-radius: 5px;
-    padding: 10px 4px 4px 0px;
-    resize: none;
-}
-
-.chatarea {
-    position: absolute;
-    
-    top: 120px;
-    left: 20px;
-    height: 70%;
-    width: 80%;
-    padding-left: 15px;
-    
-    border-radius: 5px;
-    
-    overflow-y: scroll;
-    word-wrap: break-word;
-    
-    font-family: 'Titillium-Web', sans-serif;
-    
-    background-color: white;
+   background-color: #C5E3BF; 
 }
 
 #header {
     position: fixed;
     display: block;
     
-    width:100%;
-    margin-top: -10px;
-    margin-left: -7px;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-left: 15px;
+    top: 0px;
+    left: 0px;
     
-    background-color: #3399FF;
+    width:100%;
+    height: 100px;
+    
+    background-color: white;
     
     z-index: 100;
     
     font-family: 'Titillium-Web', sans-serif;
+}
+
+#title {
+    font-weight: bolder;
+    height: 48px;
+    padding: 8px;
+    color: silver;
+}
+
+#versionnumber {
+    font-size: 36px;
+    padding: 8px;
+    color: silver;
 }
 
 /* Navigation bar */
 
 #navigationbar {
-    position: fixed;
+    position: absolute;
     display: block;
     
-    background-color: black;
+    background-color: white;
+    border-top-width: 3px;
+    border-top-style: solid;
+    border-top-color: green;
     
+    border-bottom-width: 3px;
+    border-bottom-style: solid;
+    border-bottom-color: green;
+    
+    bottom: 0px;
     height: 30px;
     width: 100%;
-    
-    margin-top: 65px;
-    margin-left: -7px;
-    
     z-index: 100;
-}
-/* These will be links eventually */
-#navigationbuttons li {
-    display: inline;
-    position: relative;
-
-    bottom: 7px;
-    left: -20px;
-    color: white;
-    text-align: center;
-    padding: 5px 10px 5px 10px;
-    
-    font-family: 'Titillium-Web', sans-serif;
-    
 }
 
 /* Side panel */
 .sidepanel {
-    background-color:white;
+    
     font-family: "Titillium-Web", sans-serif;
     position: fixed;
     top: 120px;
     right: 0px;
-    width: 17%;
+    width: 250px;
     height: 85%;
+    border-radius: 3px;
 }
 
+#roomname {
+    position: absolute;
+    background-color: white;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    border-radius: 3px;
+    padding: 8px;
+    /* Current total height: 60 + 16 = 76 px */
+}
 
+#currentusers {
+    position: absolute;
+    top: 80px; /* leaves 3 pixels above */
+    left: 0;
+    right: 0;
+    height: 150px;
+    border-radius: 3px;
+    padding: 8px;
+    background-color: white;
+    /* Current total height: 150 + 16 = 166px */
+}
+
+#reference {
+    position: absolute;
+    top: 249px; /* Leaves 3 px above */
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 8px; 
+    background-color: white;
+    border-radius: 3px;
+    
+}
+
+/*Chat area that displays messages and inputs */
+.chatarea {
+    position: absolute;
+    
+    top: 120px;
+    left: 20px;
+    bottom: 10px;
+    right: 270px;
+    
+    border-radius: 3px;
+    
+    word-wrap: break-word;
+    
+    font-family: 'Titillium-Web', sans-serif;
+    
+}
+/* Area for the pinned posts */
+#pin {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 70px;
+    background-color: white;
+    padding: 8px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border: 1px solid green;
+    
+    /* Total height: 70 + 16 + 2 = 88 */
+}
+
+/* Area that displays the chat messages */
+#messages {
+    position: absolute;
+    top: 88px; /* matches the pinned post */
+    left: 0;
+    right: 0;
+    bottom: 152px; /* input chat + preview pane + 10px */
+    background-color: white;
+    
+    padding: 8px;
+    border: 1px solid green;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    
+    overflow-y: scroll;
+}
+
+/*Area the displays preview*/
+#preview {
+    position: absolute;
+    bottom: 66px; /* Adds 10 to the input chat */
+    height: 60px;
+    left: 0;
+    right: 0;
+    background-color: white;
+    border-radius: 3px;
+    padding: 8px;
+    border: 1px solid green;
+    /* Total height: 60 + 16 = 76 px */
+    
+}
+
+/* Chat input box */
+.chatinput{
+    position: absolute;
+    height: 40px;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    font-family: 'Titillium-Web', sans-serif;
+    overflow-y: scroll;
+    word-wrap: break-word;
+    border-radius: 3px;
+    resize: none;
+    padding: 8px;
+    border: 1px solid green;
+    /* Total height is 56 px */
+}
