--- a/mathchat.css
+++ b/mathchat.css
@@ -75,6 +75,7 @@ body {
     width: 250px;
     height: 85%;
     border-radius: 3px;
+    z-index: 1;
 }
 
 #roomname {
@@ -209,4 +210,11 @@ body {
 .navbutton:visited{
     color: black;
     text-decoration: none;
+}
+#loginbutton {
+    position: absolute;
+    right: 200px;
+    top: 5px;
+    
+    z-index: 1000;
 }
