--- a/mathchat.css
+++ b/mathchat.css
@@ -197,6 +197,10 @@ body {
 .navbutton {
     padding-left: 10px;
     padding-right: 10px;
+    /* This padding below makes the hover match up */
+    /* with the border of the bar */
+    padding-top: 5px; 
+    padding-bottom: 8px; 
 }
 .navbutton:hover{
     background-color: #C0C0C0;
@@ -211,8 +215,13 @@ body {
 }
 #loginbutton {
     position: absolute;
-    right: 200px;
+    right: 10px;
     top: 5px;
     
     z-index: 1000;
+}
+
+#login-dropdown-list {
+    position: absolute;
+    left: -200px;
 }
