Added adjustable panes for preview and messages and edited the timestamp

--- a/mathchat.css
+++ b/mathchat.css
@@ -8,18 +8,18 @@ body {
 
 #rest-of-page {
     position: absolute;
-    left: 0px;
-    right: 0px;
+    left: 0;
+    right: 0;
     top: 100px;
-    bottom: 0px;
+    bottom: 0;
 }
 
 #header {
     position: absolute;
     display: block;
     
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     
     width:100%;
     height: 100px;
@@ -145,10 +145,21 @@ body {
     padding: 5px 8px 8px 8px;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
+
     border: 1px solid green;
+    border-bottom-width: 0;
     overflow-y: scroll;
     
     /* Total height: 70 + 16 + 2 = 88 */
+}
+#splitbar {
+    position: absolute;
+    background-color: green;
+    top: 85px;
+    height: 3px;
+    width: 100%;
+    z-index: 100;
+    cursor: ns-resize;
 }
 
 /* Area that displays the chat messages */
@@ -162,6 +173,7 @@ body {
     
     padding: 5px 8px 8px 8px;
     border: 1px solid green;
+    border-top-width: 0;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     
@@ -173,10 +185,24 @@ body {
     margin-bottom: 8px; /* This is what google chat uses */
 }
 
+#messages p > .pinicon {
+    display: none;
+}
+
 #pin p {
     position: relative;
     margin-top: 4px;
     margin-bottom: 4px;
+}
+
+#messages p:hover {
+    background-color: #F2F2F2;
+    transition: background-color 0.5s;
+}
+
+#messages p:hover > .pinicon {
+    display: inline;
+    transition: display 0.5s;
 }
 /*Area the displays preview*/
 #preview {
