--- a/mathchat.css
+++ b/mathchat.css
@@ -1,6 +1,6 @@
 /* CSS declarations go here */
 
-@import url("http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext");
+@import url(http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext);
 
 body {
    background-color: #C5E3BF; 
@@ -8,18 +8,18 @@ body {
 
 #rest-of-page {
     position: absolute;
-    left: 0;
-    right: 0;
+    left: 0px;
+    right: 0px;
     top: 100px;
-    bottom: 0;
+    bottom: 0px;
 }
 
 #header {
     position: absolute;
     display: block;
     
-    top: 0;
-    left: 0;
+    top: 0px;
+    left: 0px;
     
     width:100%;
     height: 100px;
@@ -57,7 +57,7 @@ body {
     border-bottom-style: solid;
     border-bottom-color: green;
     
-    bottom: 0;
+    bottom: 0px;
     height: 20px;
     width: 100%;
     padding: 5px;
@@ -69,7 +69,7 @@ body {
     font-family: "Titillium-Web", sans-serif;
     position: fixed;
     top: 120px;
-    right: 0;
+    right: 0px;
     width: 250px;
     height: 85%;
     border-radius: 3px;
@@ -131,7 +131,7 @@ body {
     
     word-wrap: break-word;
     
-    font-family: "Titillium-Web", sans-serif;
+    font-family: 'Titillium-Web', sans-serif;
     
 }
 /* Area for the pinned posts */
@@ -145,21 +145,10 @@ body {
     padding: 5px 8px 8px 8px;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
-
     border: 1px solid green;
-    border-bottom-width: 0;
     overflow-y: scroll;
     
     /* Total height: 70 + 16 + 2 = 88 */
-}
-#splitbar {
-    position: absolute;
-    background-color: green;
-    top: 85px;
-    height: 3px;
-    width: 100%;
-    z-index: 100;
-    cursor: ns-resize;
 }
 
 /* Area that displays the chat messages */
@@ -168,12 +157,11 @@ body {
     top: 85px; /* matches the pinned post */
     left: 0;
     right: 0;
-    bottom: 172px; /* input chat + preview pane + 10px */
+    bottom: 152px; /* input chat + preview pane + 10px */
     background-color: white;
     
     padding: 5px 8px 8px 8px;
     border: 1px solid green;
-    border-top-width: 0;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     
@@ -185,34 +173,15 @@ body {
     margin-bottom: 8px; /* This is what google chat uses */
 }
 
-#messages p > .pinicon {
-    display: none;
-}
-
 #pin p {
     position: relative;
     margin-top: 4px;
     margin-bottom: 4px;
 }
-#pin p > input {
-    margin-left: 5px;
-}
-
-#messages p:hover {
-    background-color: #F2F2F2;
-    transition: background-color 0.25s;
-
-}
-
-#messages p:hover > .pinicon {
-    display: inline;
-    transition: display 0.5s;
-        margin-left: 5px;
-}
 /*Area the displays preview*/
 #preview {
     position: absolute;
-    bottom: 86px; /* Adds 10 to the input chat */
+    bottom: 66px; /* Adds 10 to the input chat */
     height: 60px;
     left: 0;
     right: 0;
@@ -228,9 +197,9 @@ body {
 /* Chat input box */
 .chatinput{
     position: absolute;
-    height: 60px;
-    bottom: 0;
-    left: 0;
+    height: 40px;
+    bottom: 0px;
+    left: 0px;
     width: calc(100% - 70px);
     font-family: 'Titillium-Web', sans-serif;
     overflow-y: scroll;
@@ -244,13 +213,13 @@ body {
 
 #previewbutton {
     position: absolute;
-    height: 30px;
-    bottom: 42px;
-    right: -5px;
-    width: 55px;
-    background-color: green;
-    border: 2px solid white;
-    color: white;
+    height: 29px;
+    bottom: 29px;
+    right: 0;
+    width: 52px;
+    background-color: white;
+    border: 1px solid white;
+    color: green;
     padding: 1px;
     cursor: pointer;
 }
@@ -259,17 +228,13 @@ body {
     position: absolute;
     height: 29px;
     bottom: 0;
-    right: -5px;
-    width: 55px;
+    right: 0;
+    width: 52px;
     background-color: green;
-    border: 2px solid white;
+    border: 1px solid green;
     color: white;
     padding: 1px;
     cursor: pointer;
-}
-
-#previewbutton:click, #sendbutton:click {
-    border-style: inset;
 }
 
 /* "buttons" in the navigation bar */
@@ -280,7 +245,6 @@ body {
     /* with the border of the bar */
     padding-top: 5px; 
     padding-bottom: 8px; 
-    transition: background-color 0.3s;
 }
 .navbutton:hover{
     background-color: #C0C0C0;
@@ -316,6 +280,49 @@ body {
 
 }
 
+.deleteicon {
+    position: absolute;
+    float: right;
+    height: 15px;
+    top: 0;
+    right: 20px;
+    cursor: point;
+}
+
+#messages p > .deleteicon {
+    display: none;
+}
+
+#messages p > .pinicon {
+    display: none;
+}
+
+#pin p {
+    position: relative;
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+#pin p > input {
+    margin-left: 5px;
+}
+
+#messages p:hover {
+    background-color: #F2F2F2;
+    transition: background-color 0.25s;
+
+}
+
+#messages p:hover > .pinicon {
+    display: inline;
+    transition: display 0.5s;
+        margin-left: 5px;
+}
+
+#messages p:hover > .deleteicon {
+    display: inline;
+    transition: display 0.5s;
+    margin-left: 5px;
+}
 .removepin {
     position: absolute;
     float: right;
@@ -323,4 +330,23 @@ body {
     top: 0;
     right: 0;
     cursor: point;
+}
+
+#splitbar {
+    position: absolute;
+    background-color: green;
+    top: 85px;
+    height: 3px;
+    width: 100%;
+    z-index: 100;
+    cursor: ns-resize;
+    border: 0;
+}
+
+.textregion {
+    margin-right: 40px;
+}
+
+.pintextregion {
+    margin-right: 20px;
 }
