--- a/mathchat.css
+++ b/mathchat.css
@@ -376,3 +376,20 @@ body {
 #nthroot {
     width: 35px;
 }
+
+#guide {
+    position: absolute;
+    left: 20px;
+    top: 10px;
+    right: 20px;
+    bottom: 20px;
+    margin: 0;
+    font-family: 'Titillium-Web', sans-serif;
+    background-color: white;
+    border-radius: 4px;
+    padding: 8px;
+    overflow-y: auto;
+}
+h1 {
+    margin-top: 5px;
+}
