--- a/mathchat.css
+++ b/mathchat.css
@@ -98,12 +98,12 @@ body {
     top: 41px; /* leaves 3 pixels above */
     left: 0;
     right: 0;
-    height: 184px;
+    /*height: 154px;*/
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     padding: 8px;
     background-color: white;
-    overflow-y: scroll;
+    overflow-y: auto;
     /* Current total height: 150 + 16 = 166px */
 }
 
@@ -392,4 +392,53 @@ body {
 }
 h1 {
     margin-top: 5px;
+}
+#roomnametext {
+    position: absolute;
+    left: 0;
+    right: 40%;
+    top: 0;
+    bottom: 0;
+    text-align: center;
+    overflow-x: hidden;
+    padding: 5px;
+}
+
+#roomnamebutton {
+    position: absolute;
+    left: 60%;
+    right: 0;
+    top: 12.5%;
+    bottom: 12.5%;
+}
+#addname {
+    position: absolute;
+    left: 0;
+    width: calc(100% - 33px);
+    top: 210px;
+    height: 21px;
+}
+#addbutton {
+    position: absolute;
+    right: 0;
+    width: 27px;
+    height: 27px;
+    top: 210px;
+}
+
+.invited {
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    width: calc(100% - 20px);
+    
+}
+.removeinvited {
+    height: 16px;
+    position: absolute;
+    right: 0;
+    display: none;
+}
+
+.invitedusers:hover > .removeinvited {
+    display: inline;
 }
