--- a/mathchat.css
+++ b/mathchat.css
@@ -10,8 +10,8 @@ body {
 #homepage {
     padding: 10px; 
     position: absolute;
-    left: 10px;
-    right: 10px;
+    left: 550px;
+    right: 0;
     top: 10px;
     display:block; 
     background-color: white; 
@@ -34,6 +34,23 @@ ol {
 
 a {
     text-decoration: none;
+    color: black;
+}
+.subscribedTo:hover {
+    background-color: #EEEEEE;
+}
+a:visited {
+    text-decoration: none;
+    color: black;
+}
+.deletesubscription {
+    height: 16px;
+    display: none;
+    position: absolute;
+    right: 5px;
+}
+li:hover > .deletesubscription {
+    display: inline;
 }
 
 #toc {
