--- a/mathchat.css
+++ b/mathchat.css
@@ -29,7 +29,7 @@ body {
     font-family: 'Titillium-Web', sans-serif;
 }
 
-#title {
+#titleimage {
     font-weight: bolder;
     height: 48px;
     padding: 8px;
