--- a/mathchat.css
+++ b/mathchat.css
@@ -154,6 +154,7 @@ li:hover > .deletesubscription {
     text-align: center;
     font-size: 20px;
     color: white;
+    overflow-x: hidden;
     /* Current total height: 60 + 16 = 76 px */
 }
 
@@ -232,7 +233,7 @@ li:hover > .deletesubscription {
     
     overflow-y: auto;
 }
-#messages p {
+#messages p, #messagesfull p {
     position: relative;
     margin-top: 3px;
     margin-bottom: 8px; /* This is what google chat uses */
@@ -367,6 +368,13 @@ li:hover > .deletesubscription {
 #messages p > .pinicon {
     display: none;
 }
+#messagesfull p > .deleteicon {
+    display: none;
+}
+
+#messagesfull p > .pinicon {
+    display: none;
+}
 
 #pin p {
     position: relative;
@@ -377,7 +385,25 @@ li:hover > .deletesubscription {
     margin-left: 5px;
 }
 
-#messages p:hover {
+#messagesfull p:hover {
+    background-color: #F2F2F2;
+    transition: background-color 0.25s;
+
+}
+
+#messagesfull p:hover > .pinicon {
+    display: none;
+    transition: display 0.5s;
+        margin-left: 5px;
+}
+
+#messagesfull p:hover > .deleteicon {
+    display: none;
+    transition: display 0.5s;
+    margin-left: 5px;
+}
+
+#messagesfull p:hover {
     background-color: #F2F2F2;
     transition: background-color 0.25s;
 
@@ -602,4 +628,8 @@ h1 {
 @-webkit-keyframes allowed {
     from {right: -245px;}
     to {right: 0;}
+}
+
+#messagesfull {
+    font-family: 'Titillium-Web', sans-serif;
 }
